backend working and Unit tested ok

--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,11 @@
         "should": "latest",
         "supertest" : "latest",
         "methods":"0.0.1",
-
         "grunt-contrib-watch": "latest",
         "grunt-contrib-jshint": "latest",
         "grunt-nodemon": "latest",
+	"grunt-mocha-test" : "latest",
         "grunt-concurrent": "latest"
-
     },
     "engines": {
         "node": "0.8.4",
